# playground

angular/uirouter/: bower.json  package.json
angular/uirouter/app/: index.html
angular/uirouter/app/scripts/: app.js
angular/uirouter/app/scripts/controllers/: about.js  main.js
angular/uirouter/test/: karma.conf.js
angular/uirouter/test/spec/controllers/: about.js  main.js
cpp/: .gitignore
cpp/test_fbthrift/: .ycm_extra_conf.py  CMakeLists.txt  architecture.txt  compile  design.txt  notes.txt  todo.txt
cpp/test_fbthrift/src/: ActorTest.cpp  CMakeLists.txt  TestServer.cpp  task
cpp/test_fbthrift/src/actor/: Actor.cpp  Actor.h  Actor.hpp  ActorMsg.cpp  ActorMsg.h  ActorRequest.cpp  ActorRequest.h  ActorServer.cpp  ActorServer.h  ActorSystem.cpp  ActorSystem.h  ActorSystem.hpp  ActorUtil.h  Behavior.cpp  Behavior.h  CMakeLists.txt  Error.h  Makefile  RemoteActor.cpp  RemoteActor.h  Service.thrift  ServiceHandle.cpp  ServiceHandle.h  thcpp
cpp/test_fbthrift/src/actor/test/: ActorMsgTest.cpp  ActorRequestTest.cpp  ActorSystemTest.cpp  ActorTest.cpp  BehaviorTest.cpp  CMakeLists.txt  FutureTest.cpp  PingPongActor.h
cpp/test_fbthrift/src/cluster/: CMakeLists.txt  KVStore.h  ZookeeperClient.cpp  ZookeeperClient.h  ZookeeperKVStore.h
cpp/test_fbthrift/src/cluster/test/: CMakeLists.txt  ZookeeperClientTest.cpp
cpp/test_fbthrift/src/cluster/zk/: CMakeLists.txt
cpp/test_fbthrift/src/config/: CMakeLists.txt  ConfigService.cpp  ConfigService.h
cpp/test_fbthrift/src/config/test/: CMakeLists.txt  ConfigTest.cpp
cpp/test_fbthrift/src/configservice/: CMakeLists.txt  ConfigService.cpp  ConfigService.h  ConfigServiceMain.cpp  Makefile
cpp/test_fbthrift/src/configservice/java/: pom.xml
cpp/test_fbthrift/src/configservice/java/src/main/java/: Config.java
cpp/test_fbthrift/src/data/: CMakeLists.txt  DataAcessService.cpp  DataAcessService.h
cpp/test_fbthrift/src/examples/: CMakeLists.txt  ZookeeperClient.cpp  ZookeeperClient.h  future_test.cpp  zk.cpp
cpp/test_fbthrift/src/examples/actor/: Actor.cpp  Actor.h  Actor.hpp  ActorMsg.cpp  ActorMsg.h  ActorServer.cpp  ActorSystem.h  Behavior.cpp  CMakeLists.txt  Makefile  RemoteActor.h  RingBuffer.h  Service.thrift  ServiceHandle.cpp
cpp/test_fbthrift/src/examples/actor/gen-cpp2/: ConfigApi.cpp  ConfigApi.h  ConfigApi.tcc  ConfigApi_client.cpp  ConfigApi_processmap_compact.cpp  ServiceApi.cpp  ServiceApi.h  ServiceApi.tcc  ServiceApi_client.cpp  ServiceApi_processmap_simple_json.cpp  Service_constants.cpp  Service_constants.h  Service_types.cpp  Service_types.h  Service_types.tcc  TestService.cpp  TestService.h  TestService.tcc  TestService_client.cpp  TestService_processmap_simple_json.cpp
cpp/test_fbthrift/src/examples/actor/test/: ActorRequestTest.cpp  ActorSystemTest.cpp  ActorTest.cpp  CMakeLists.txt  PingPongActor.h
cpp/test_fbthrift/src/examples/config/: CMakeLists.txt  ConfigService.h
cpp/test_fbthrift/src/examples/config/test/: CMakeLists.txt
cpp/test_fbthrift/src/examples/data/: CMakeLists.txt  VolumeActor.h
cpp/test_fbthrift/src/examples/raft/: CMakeLists.txt  Replica.h  VolumeHandler.h
cpp/test_fbthrift/src/idls/: Makefile  commontypes.thrift  configapi.thrift  configtree.thrift  status.thrift
cpp/test_fbthrift/src/infra/: CMakeLists.txt  ConnectionCache.cpp  ConnectionCache.h  CoordinationClient.h  InfraForwards.h  KafkaClient.cpp  KafkaClient.h  ModuleProvider.h  PropertiesCache.cpp  Serializer.tcc  Service.cpp  Service.h  Service.tcc  ServiceServer.cpp  ServiceServer.h  StatusException.h  ZooKafkaClient.cpp  ZooKafkaClient.h  ZookeeperClient.cpp  ZookeeperClient.h
cpp/test_fbthrift/src/infra/gen-ext/: KVBinaryData_ext.tcc  commontypes_ext.cpp  commontypes_ext.h
cpp/test_fbthrift/src/infra/test/: CMakeLists.txt  KafkaClientTest.cpp  ServiceTest.cpp  ZooKafkaClientTest.cpp  ZookeeperClientTest.cpp
cpp/test_fbthrift/src/java/: pom.xml
cpp/test_fbthrift/src/java/src/main/java/config/: ConfigService.java  Webapp.java
cpp/test_fbthrift/src/java/src/main/java/infra/: ConfigTreeUtils.java  InfraException.java
cpp/test_fbthrift/src/java/src/test/java/: ConfigServiceTest.java
cpp/test_fbthrift/src/test/: CMakeLists.txt  DatomTest.cpp  ServiceTest.cpp
cpp/test_fbthrift/src/testlib/: CMakeLists.txt  DatomBringupHelper.cpp  DatomBringupHelper.h  DatomBringupHelper.tcc
cpp/test_fbthrift/src/tools/: task.sh
cpp/test_fbthrift/src/util/: Log.h  TypeMappings.h
cpp/test_fbthrift/src/volumeserver/: CMakeLists.txt  VolumeServer.cpp  VolumeServer.h  VolumeServerMain.cpp
java/Examples/: pom.xml
java/Examples/src/main/java/: CollectionsEx.java  GoogAuthentication.java  JaxonEx.java  JdbcEx.java
java/Examples/src/main/java/akka/: ChildWatch.java  FutureEx.java  HelloActorEx.java  Lifecycle.java
java/Examples/src/main/java/entitymodels/: Course.java  Entry.java  Person.java  Student.java  Tag.java
java/Examples/src/main/java/generics/: TypeSafeContainerEx.java  TypeSafeContainerEx2.java
java/Examples/src/main/resources/: application.conf
java/Examples/src/test/java/: JpaTest.java
